# AnalysisOfDepressionInStudents

./: .gitignore  README.md  config.py  main.py  pyproject.toml  robot.cmd  setup_with_gpu.ps1  verify_gpu.py  verify_gpu_usage.py
.github/: CODEOWNERS
docs/: BEST_MODEL_DEPLOYMENT.md  CLI_APP.md  FAMD_KMEANS_SO_K.md  GITHUB_DOCS_QUYEN.md  HUAN_LUYEN_4_MODELS.md  MACHINE_LEARNING_DEEP_LEARNING.md  README.md  TUI_HOTKEYS.md
rust_engine/: Cargo.toml
rust_engine/src/: bspline.rs  cross_val.rs  gam.rs  lib.rs  pirls.rs  python_bindings.rs
src/: training_budget.py
src/app/: __init__.py  contracts.py  deployment.py  services.py
src/cli/: __init__.py  console.py  entrypoint.py  textual_app.py  workflows.py
src/data_processing/: __init__.py  processor.py  standardizer.py
src/deep_learning/: __init__.py  trainer.py
src/entrypoints/: __init__.py  main_dispatch.py
src/evaluation/: __init__.py  metrics.py  report_generator.py
src/ml_models/: __init__.py  explainer.py  fairness_analysis.py  famd.py  gam_model.py  imbalanced.py  leakage_check.py  model_comparator.py  optimizer.py  predictor.py  risk_model.py  robustness.py  stratified_split.py  subgroup_analysis.py
src/statistical_analysis/: __init__.py  analyzer.py
src/utils/: __init__.py  helpers.py
src/visualization/: __init__.py  plots.py
tests/: test_app_services.py  test_cli_workflows.py  test_deployment.py  test_famd_reporting.py
