[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "num-complex"] }
nalgebra = { version = "0.34.2", features = ["serde-serialize"] }
ndarray = { version = "0.17.2", features = ["serde"] }
numpy = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
log = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
